gitops/manifests/hiker/hiker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hiker
  namespace: hiker
  labels:
    app: hiker
    app.kubernetes.io/name: hiker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hiker
  template:
    metadata:
      labels:
        app: hiker
        app.kubernetes.io/name: hiker
    # should not be needed, keeping as an example
    # affinity:
    #     nodeAffinity:
    #       requiredDuringSchedulingIgnoredDuringExecution:
    #         nodeSelectorTerms:
    #           - matchExpressions:
    #               - key: kubernetes.io/hostname  # might be needed for EBS? 
    #                 operator: In 
    #                 values:
    #                   - kevin
    spec:
      containers:
      - name: nginx
        image: ghcr.io/janbenisek/swisshikefinder:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080 # internal port for the app
        resources: # added by me
          requests:
            memory: "128Mi"  
            cpu: "10m"      
          limits:
            memory: "256Mi"  
            cpu: "100m"    
        # volumeMounts:
        # - mountPath: /mnt/store # dir inside container where the app will write
        #   name: local-storage # link to the volume name in volumes
      # volumes:
      #   - name: local-storage
      #     persistentVolumeClaim:
      #       claimName: pvc-hiker # connects it to PVC

---
apiVersion: v1
kind: Service
metadata:
  name: hiker
  namespace: hiker
  labels:
    app.kubernetes.io/name: hiker
spec:
  selector:
    app: hiker
  type: ClusterIP
  # type: LoadBalancer
  # loadBalancerIP: 192.168.178.200 # fixed IP for cloudflare to reach it (also handy for debugging)
  ports:
  - name: http
    port: 80 # we talk to 80
    protocol: TCP
    targetPort: 8080 # app listens here
---
# Works through cloudflare tunnel
# The annotation, my ingress should handle HTTPS (gets encrypted stuff from Cloudflare)
# and listenes on 80, then routes internally to 80 and 8080
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hiker
  labels:
    app: hiker
    app.kubernetes.io/name: hiker
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/limit-rpm: "3600"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"  # if I want to go through 443 and https
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: swisshikefinder.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hiker
            port:
              number: 80 # or 443
  tls:
  - hosts:
      - swisshikefinder.com
    secretName: letsencrypt-swisshikefinder-com
